src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition2[InputInvalidJavadocPosition]#method25().mjava
    void method25() { /** violation */ int variable; }

